# shapeletGUI

./: AUTHORS  CMakeLists.txt  INSTALL.md  README.md
src/: CMakeLists.txt
src/decompose/: CMakeLists.txt  decompose.c
src/lib/: CMakeLists.txt  Makefile  Makefile.cuda  apc.c  decom_fits.c  decompose.c  fft.c  fits_utils.c  lapack.c  multi_fits.c  myblas.c  shapelet.h  shapelet_cuda.cu  shapelet_lm.c  shapelet_uv.c
src/shapeletGUI/: CMakeLists.txt  main.cpp  mygraphicsview.cpp  mygraphicsview.h  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  resources.qrc  shapeletGUI.pro  shapeletmain.cpp  shapeletmain.h  shapeletmain.ui  textdialog.cpp  textdialog.h  textdialog.ui
